
4.15  2013-06-17
  - Improved router to make the current controller object available to actions
    as $_. (jberger, sri)
  - Fixed a few error reporting bugs in Mojo::IOLoop::Client and
    Mojo::IOLoop::Server.

4.14  2013-06-10
  - Improved url_for performance slightly.
  - Fixed bug where match attribute and render_later method were not hidden
    from the router.

4.13  2013-06-09
  - Replaced ua method in Mojolicious::Controller with a helper.
  - Fixed url_for support for absolute URLs without scheme or authority.
    (bduggan, sri)

4.12  2013-06-07
  - Improved Mojo::Message::Request to allow a few more ASCII characters in
    URLs.

4.11  2013-06-03
  - Added allow and append methods to Mojo::Headers.
  - Added split_header function to Mojo::Util.
  - Fixed cookie quoting bugs.
  - Fixed a few small boundary and charset detection bugs in Mojo::Content.
  - Fixed a few small filename detection bugs in Mojo::Message.
  - Fixed small quality detection bug in Mojolicious::Types.

4.10  2013-06-01
  - Added link and vary methods to Mojo::Headers.

4.09  2013-05-31
  - Updated jQuery to version 2.0.2.
  - Increased default max_message_size from 5MB to 10MB in Mojo::Message.

4.08  2013-05-30
  - Improved Mojo::Message::Request to allow curly brackets in URLs.
  - Improved HMAC-SHA1 performance in Mojo::Util.

4.07  2013-05-26
  - Updated jQuery to version 2.0.1.
  - Fixed format handling in routes command.

4.06  2013-05-25
  - Fixed Windows bug in "log.t".

4.05  2013-05-24
  - Fixed encoding bug in Mojo::Log.

4.04  2013-05-23
  - Added WebSocket subprotocol support to Mojo::UserAgent::Transactor.

4.03  2013-05-21
  - Fixed redirect support in get command.

4.02  2013-05-20
  - Fixed extends, layout and title helpers not to generate unnecessary log
    messages.

4.01  2013-05-19
  - Fixed small drain event bug in Mojo::IOLoop::Stream. (ChinaXing)

4.0  2013-05-15
  - Code name "Top Hat", this is a major release.