@@ -4,6 +4,7 @@
     as $_. (jberger, sri)
   - Fixed a few error reporting bugs in Mojo::IOLoop::Client and
     Mojo::IOLoop::Server.
+  - Fixed small chained hook bug.
 
 4.14  2013-06-10
   - Improved url_for performance slightly.
